--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <groupId>cn.felord</groupId>
     <artifactId>payment-spring-boot</artifactId>
-    <version>1.0.20.RELEASE</version>
+    <version>1.0.20.fix.SNAPSHOT</version>
     <packaging>pom</packaging>
     <modelVersion>4.0.0</modelVersion>
 
@@ -91,6 +91,7 @@
         <spring-boot.version>2.7.7</spring-boot.version>
         <alipay-sdk.version>4.31.7.ALL</alipay-sdk.version>
         <bcprov.version>1.78</bcprov.version>
+        <yaml.version>1.33</yaml.version>
     </properties>
 
     <distributionManagement>
@@ -126,6 +127,11 @@
                 <groupId>org.bouncycastle</groupId>
                 <artifactId>bcprov-jdk15to18</artifactId>
                 <version>${bcprov.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.yaml</groupId>
+                <artifactId>snakeyaml</artifactId>
+                <version>${yaml.version}</version>
             </dependency>
             <dependency>
                 <groupId>cn.felord</groupId>
